--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,8 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 html,
 body {
@@ -15,4 +17,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+input {
+  display: block;
+}
+
+/* remove x on search input */
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+  display: none;
 }
